--- a/arch/arm/boot/dts/aspeed-bmc-opp-sthelens.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-sthelens.dts
@@ -5,12 +5,19 @@
 
 / {
 	model = "Barrelye BMC";
-	compatible = "rackspace,barreleye-bmc", "aspeed,ast2400";
+	compatible = "ms,sthelens-bmc", "aspeed,ast2400";
 	ahb {
-		mac0: ethernet@1e660000 {
-			use-nc-si;
-			no-hw-checksum;
-		};
+                mac0: ethernet@1e660000 {
+                        compatible = "faraday,ftgmac100", "aspeed,ast2400-mac";
+                        reg = <0x1e660000 0x180>;
+                        interrupts = <2>;
+                };
+
+                mac1: ethernet@1e680000 {
+                        compatible = "faraday,ftgmac100", "aspeed,ast2400-mac";
+                        reg = <0x1e680000 0x180>;
+                        interrupts = <3>;
+                };
 
 		fmc@1e620000 {
 			reg = < 0x1e620000 0x94
