ARM:aspeed: dts: Sthelens: initial configuration in common_setup
1. Initial the NIC config in sthelens-dts
2. Support sthelens setup in aspeed_init_early();

Author:    Ken Lai <ken1029@gmail.com>
Signed-off-by: SteveLinCH <dreamerch999@gmail.com>

--- a/arch/arm/boot/dts/ast2400.dtsi
+++ b/arch/arm/boot/dts/ast2400.dtsi
@@ -264,6 +264,12 @@
 				interrupts = <19>;
 				clocks = <&clk_apb>;
 				status = "okay";
+
+			        pinctrl_mdio2_default: mdio2_default {
+                                function = "MDIO2";
+                                groups = "MDIO2";
+                                };
+
 			};
 
 			wdt: wdt@1e785000 {
