--- a/arch/arm/boot/dts/aspeed-bmc-opp-sthelens.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-sthelens.dts
@@ -4,23 +4,23 @@
 #include <dt-bindings/gpio/gpio.h>
 
 / {
-	model = "Barrelye BMC";
+	model = "Sthelens BMC";
 	compatible = "ms,sthelens-bmc", "aspeed,ast2400";
 	ahb {
-                mac0: ethernet@1e660000 {
-                        compatible = "faraday,ftgmac100", "aspeed,ast2400-mac";
-                        reg = <0x1e660000 0x180>;
-                        interrupts = <2>;
-                        no-hw-checksum;
-                        status = "disabled";
-                };
+		mac0: ethernet@1e660000 {
+		        compatible = "faraday,ftgmac100", "aspeed,ast2400-mac";
+		        reg = <0x1e660000 0x180>;
+		        interrupts = <2>;
+		        no-hw-checksum;
+		        status = "disabled";
+		};
 
-                mac1: ethernet@1e680000 {
-                        compatible = "faraday,ftgmac100", "aspeed,ast2400-mac";
-                        reg = <0x1e680000 0x180>;
-                        no-hw-checksum;
-                        interrupts = <3>;
-                };
+		mac1: ethernet@1e680000 {
+		        compatible = "faraday,ftgmac100", "aspeed,ast2400-mac";
+		        reg = <0x1e680000 0x180>;
+		        no-hw-checksum;
+		        interrupts = <3>;
+		};
 
 		fmc@1e620000 {
 			reg = < 0x1e620000 0x94
@@ -59,75 +59,51 @@
 		};
 		apb {
 			i2c: i2c@1e78a040 {
-				i2c0: i2c-bus@40 {
-					eeprom@50 {
-						compatible = "atmel,24c256";
-						reg = <0x50>;
-						pagesize = <64>;
-					};
-					rtc@68 {
-						compatible = "dallas,ds3231";
-						reg = <0x68>;
-						// interrupts = <GPIOF0>
-					};
-					lm75@4a {
-						compatible = "national,lm75";
-						reg = <0x4a>;
-					};
-				};
-			i2c2: i2c-bus@c0 {
-        			status = "okay";
-        			pca9548@77 {
-                				compatible = "nxp,pca9548";
-                				reg = <0x77>;
-                				#address-cells = <1>;
-                				#size-cells = <0>;
+				i2c2: i2c-bus@c0 {
+					i2c-switch@77 {
+							compatible = "nxp,pca9548";
+							reg = <0x77>;
                 			i2c@0 {
-						#address-cells = <1>;
-                        			#size-cells = <0>;
-                        			reg = <0x00>;
-                        			lm75@50 {
+                        			reg = <0x02>;
+                        			lm75@48 {
                                 			compatible = "national,lm75";
-                                			reg = <0x50>;
+                                			reg = <0x48>;
                         			};
-                                                lm75@51 {
-                                                        compatible = "national,lm75";
-                                                        reg = <0x51>;
-                                                };
-                                                lm75@52 {
-                                                        compatible = "national,lm75";
-                                                        reg = <0x52>;
-                                                };
-                                                lm75@53 {
-                                                        compatible = "national,lm75";
-                                                        reg = <0x53>;
-                                                };
-                                                lm75@54 {
-                                                        compatible = "national,lm75";
-                                                        reg = <0x54>;
-                                                };
-                                                lm75@55 {
-                                                        compatible = "national,lm75";
-                                                        reg = <0x55>;
-                                                };
-                                                lm75@56 {
-                                                        compatible = "national,lm75";
-                                                        reg = <0x56>;
-                                                };
-                                                lm75@57 {
-                                                        compatible = "national,lm75";
-                                                        reg = <0x57>;
-                                                };
-
-
+                                    lm75@49 {
+                                            compatible = "national,lm75";
+                                            reg = <0x49>;
+                                    };
+                                    lm75@4a {
+                                            compatible = "national,lm75";
+                                            reg = <0x4a>;
+                                    };
+                                    lm75@4b {
+                                            compatible = "national,lm75";
+                                            reg = <0x4b>;
+                                    };
+                                    lm75@4c {
+                                            compatible = "national,lm75";
+                                            reg = <0x4c>;
+                                    };
+                                    lm75@4d {
+                                            compatible = "national,lm75";
+                                            reg = <0x4d>;
+                                    };
+                                    lm75@4e {
+                                            compatible = "national,lm75";
+                                            reg = <0x4e>;
+                                    };
+                                    lm75@4f {
+                                            compatible = "national,lm75";
+                                            reg = <0x4f>;
+                                    };
                 			};
-
                 			i2c@1 {
                         			#address-cells = <1>;
                         			#size-cells = <0>;
                         			reg = <0x01>;
 
-						/* PCAL9538 */
+							/* PCAL9538 */
                 			};
 
                 			i2c@3 {
@@ -135,67 +111,9 @@
                         			#size-cells = <0>;
                         			reg = <0x3>;
 
-						/* PCAL9538 x 3 */
+							/* PCAL9538 x 3 */
                 			};
         				};
-				};
-
-				i2c3: i2c-bus@100 {
-					occ@50 {
-						compatible = "ibm,occ-i2c";
-						reg = <0x50>;
-					};
-					occ@51 {
-						compatible = "ibm,occ-i2c";
-						reg = <0x51>;
-					};
-				};
-				i2c4: i2c-bus@140 {
-					adm1278@10 {
-						// P12V_a for CPU0
-						compatible = "adi,adm1278";
-						reg = <0x10>;
-						sense-resistor = <500>;
-					};
-					eeprom@54 {
-						compatible = "atmel,24c256";
-						reg = <0x54>;
-						pagesize = <64>;
-					};
-				};
-				i2c5: i2c-bus@180 {
-					adm1278@10 {
-						// P12V_b for CPU1
-						compatible = "adi,adm1278";
-						reg = <0x10>;
-						sense-resistor = <500>;
-					};
-				};
-				i2c6: i2c-bus@1c0 {
-					nct7904@2d {
-						compatible = "nuvoton,nct7904";
-						reg = <0x2d>;
-					};
-					nct7904@2e {
-						compatible = "nuvoton,nct7904";
-						reg = <0x2e>;
-					};
-					eeprom@51 {
-						compatible = "atmel,24c02";
-						reg = <0x51>;
-						pagesize = <8>;
-					};
-					eeprom@55 {
-						compatible = "atmel,24c02";
-						reg = <0x55>;
-						pagesize = <8>;
-					};
-					adm1278@10 {
-						// P12V_c for HDD and IO board
-						compatible = "adi,adm1278";
-						reg = <0x10>;
-						sense-resistor = <500>;
-					};
 				};
 			};
 		};
