--- a/arch/arm/boot/dts/aspeed-bmc-opp-sthelens.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-sthelens.dts
@@ -59,61 +59,41 @@
 		};
 		apb {
 			i2c: i2c@1e78a040 {
-				i2c2: i2c-bus@c0 {
-					i2c-switch@77 {
+				i2c1: i2c-bus@80 {
+					GPIO-MUX5@70 {
 							compatible = "nxp,pca9548";
-							reg = <0x77>;
+							reg = <0x70>;
+					};
+				};
+				i2c2: i2c-bus@c0 {
+					i2c-switch@76 {
+							compatible = "nxp,pca9548";
+							reg = <0x76>;
                 			i2c@0 {
-                        			reg = <0x02>;
-                        			lm75@48 {
-                                			compatible = "national,lm75";
-                                			reg = <0x48>;
-                        			};
-                                    lm75@49 {
-                                            compatible = "national,lm75";
-                                            reg = <0x49>;
-                                    };
-                                    lm75@4a {
-                                            compatible = "national,lm75";
-                                            reg = <0x4a>;
-                                    };
-                                    lm75@4b {
-                                            compatible = "national,lm75";
-                                            reg = <0x4b>;
-                                    };
-                                    lm75@4c {
-                                            compatible = "national,lm75";
-                                            reg = <0x4c>;
-                                    };
-                                    lm75@4d {
-                                            compatible = "national,lm75";
-                                            reg = <0x4d>;
-                                    };
-                                    lm75@4e {
-                                            compatible = "national,lm75";
-                                            reg = <0x4e>;
-                                    };
-                                    lm75@4f {
-                                            compatible = "national,lm75";
-                                            reg = <0x4f>;
-                                    };
+                        			reg = <0x00>;
                 			};
                 			i2c@1 {
-                        			#address-cells = <1>;
-                        			#size-cells = <0>;
                         			reg = <0x01>;
-
-							/* PCAL9538 */
+                        	};
+                			i2c@2 {
+                        			reg = <0x02>;
                 			};
-
                 			i2c@3 {
-                        			#address-cells = <1>;
-                        			#size-cells = <0>;
-                        			reg = <0x3>;
-
-							/* PCAL9538 x 3 */
+                        			reg = <0x03>;
+                        	};
+                			i2c@4 {
+                        			reg = <0x04>;
                 			};
-        				};
+                			i2c@5 {
+                        			reg = <0x05>;
+                        	};
+                			i2c@6 {
+                        			reg = <0x06>;
+                			};
+                			i2c@7 {
+                        			reg = <0x07>;
+                        	};
+        			};
 				};
 				i2c3: i2c-bus@100 {
         				GPIO-MUX1@74 {
