--- a/arch/arm/configs/aspeed_defconfig
+++ b/arch/arm/configs/aspeed_defconfig
@@ -107,6 +107,7 @@ CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_SLAVE_EEPROM=y
 CONFIG_GPIO_ASPEED=y
 CONFIG_SENSORS_POWER8_OCC_I2C=y
+CONFIG_SENSORS_AST_ADC=y
 CONFIG_PMBUS=y
 CONFIG_SENSORS_ADM1275=y
 CONFIG_SENSORS_TMP421=y
