--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1186,6 +1186,14 @@ config SENSORS_NCT7904
 	  This driver can also be built as a module.  If so, the module
 	  will be called nct7904.
 
+config SENSORS_AST_ADC
+        tristate "ASPEED ADC Controller Driver"
+        depends on ARCH_ASPEED
+        default y
+        help
+          This driver provides support for the ASPEED ADC
+          Controller, which provides an Voltage Sensor.
+
 config SENSORS_POWER8_OCC_I2C
 	tristate "Power8 On Chip Controller i2c driver"
 	depends on I2C
