Add ASPEED ADC controller driver.
Change-Id: I996fc4e006e711e9c1f27d69621c544305fa0380
Signed-off-by: Ken Lai <ken.sk.lai@mail.foxconn.com>

--- a/arch/arm/mach-aspeed/Makefile
+++ b/arch/arm/mach-aspeed/Makefile
@@ -1,4 +1,5 @@
 # Object file lists.
 
 obj-$(CONFIG_ARCH_ASPEED)	+= aspeed.o
+obj-$(CONFIG_ARCH_ASPEED)       += dev-adc.o
 obj-$(CONFIG_DEBUG_FS)	+= debugfs.o
