Default NC-SI mux to select LOM

--- a/arch/arm/boot/dts/aspeed-bmc-opp-zaius.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-zaius.dts
@@ -299,12 +299,31 @@
 };
 
 &gpio {
+	 rmii_sw1_sel_n {
+  		gpio-hog;
+  		gpios = <ASPEED_GPIO(A, 0) GPIO_ACTIVE_HIGH>;
+  		output-low;
+  		line-name = "rmii_sw1_sel_n";
+	};
+
+ 	rmii_sw2_sel_n {
+  		gpio-hog;
+  		gpios = <ASPEED_GPIO(A, 2) GPIO_ACTIVE_HIGH>;
+  		output-low;
+  		line-name = "rmii_sw2_sel_n";
+ 	};
 	line_iso_u146_en {
 		gpio-hog;
 		gpios = <ASPEED_GPIO(O, 4) GPIO_ACTIVE_HIGH>;
 		output-high;
 		line-name = "iso_u164_en";
 	};
+	 ncsi_mux_en_n {
+  		gpio-hog;
+  		gpios = <ASPEED_GPIO(P, 0) GPIO_ACTIVE_HIGH>;
+  		output-low;
+  		line-name = "ncsi_mux_en_n";
+ 	};
 
 	line_bmc_i2c2_sw_rst_n {
 		gpio-hog;
