ARM: dts: sthelens: config i2c bus for sthelens.
Enable i2c bus0, bus5-7 in dts

Change-Id: I17cfbc8b02efa7b6cbfdc09883fdf684e926ae5b
Signed-off-by: JasonLuo701 <nineballin701@gmail.com>
Signed-off-by: Steve Lin <steve.jc.lin@mail.foxconn.com>

--- a/arch/arm/boot/dts/aspeed-bmc-opp-sthelens.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-sthelens.dts
@@ -70,6 +70,9 @@
 	status = "okay";
 };
 
+&i2c0{
+	status = "okay";
+};
 &i2c1{
 	status = "okay";
 	GPIO-MUX5@70 {
@@ -185,6 +188,15 @@
         reg = <0x50>;
         pagesize = <64>;
     };
+};
+&i2c5{
+	status = "okay";
+};
+&i2c6{
+	status = "okay";
+};
+&i2c7{
+	status = "okay";
 };
 &vuart {
 	status = "okay";
