dts: Add PCIE device
Add FPGA ambient LM75
Add M.2*4

Change-Id: Ia1e1c11e12930bb614b0456377ef04bac6ac065c
Signed-off-by: Jason Luo <jason.cc.luo@mail.foxconn.com>

--- a/arch/arm/boot/dts/aspeed-bmc-opp-g50.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-g50.dts
@@ -146,6 +146,13 @@
 	i2c-switch@77 {
 			compatible = "nxp,pca9548";
 			reg = <0x77>;
+                        i2c@0 {
+                                reg = <0x0>;
+                                lm75@4c {
+                                          compatible = "national,lm75";
+                                          reg = <0x4c>;
+                                };
+                        };
 			i2c@1 {
         			#address-cells = <1>;
         			#size-cells = <0>;
@@ -153,6 +160,26 @@
 
 			/* PCAL9538 */
 			};
+                        i2c@2 {
+                                reg = <0x2>;
+                                i2c-switch@73 {
+                                    /* M.2 mux switch */
+                                    compatible = "nxp,pca9546";
+                                    reg = <0x73>;
+                                    i2c@0 {
+                                            reg = <0x0>;
+                                    };
+                                    i2c@1 {
+                                            reg = <0x1>;
+                                    };
+                                    i2c@2 {
+                                            reg = <0x2>;
+                                    };
+                                    i2c@3 {
+                                            reg = <0x3>;
+                                    };
+                                };
+                        };
 			i2c@3 {
         			#address-cells = <1>;
         			#size-cells = <0>;
