arm:dts: change FPGA temperature sensor to TMP411
Change-Id: I671196adeee593411c8cae39f89e8534bc8d9f52
Signed-off-by: Jason Luo <jason.cc.luo@mail.foxconn.com>

--- a/arch/arm/boot/dts/aspeed-bmc-opp-g50.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-g50.dts
@@ -148,8 +148,8 @@
 			reg = <0x77>;
                         i2c@0 {
                                 reg = <0x0>;
-                                lm75@4c {
-                                          compatible = "national,lm75";
+                                tmp411@4c {
+                                          compatible = "ti,tmp411";
                                           reg = <0x4c>;
                                 };
                         };
