Enable internal RTC

--- a/arch/arm/boot/dts/aspeed-bmc-opp-g50.dts
+++ b/arch/arm/boot/dts/aspeed-bmc-opp-g50.dts
@@ -47,6 +47,12 @@
 		};
 	};
 
+rtc: rtc@1e781000 {
+        compatible = "aspeed,rtc";
+        reg = <0x1e781000 0x18>;
+        status = "okay";
+};
+
 	leds {
 		compatible = "gpio-leds";
 
